src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>EnrollmentrxRx__Student_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Information</label>
        <referenceTo>EnrollmentrxRx__Student_Information__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Graduation_Date__c</fullName>
        <description>Expected Graduation Date from Banner assists with Student Retention.</description>
        <label>Expected Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expertise_STELAR_Tools__c</fullName>
        <description>Indicates which tools the faculty and staff are experts in.</description>
        <label>Expertise (STELAR Tools)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Blackboard (Legacy)</fullName>
                </value>
                <value>
                    <fullName>Canvas LMS</fullName>
                </value>
                <value>
                    <fullName>Ensemble Video (Legacy Technology)</fullName>
                </value>
                <value>
                    <fullName>iLos (Legacy Technology)</fullName>
                </value>
                <value>
                    <fullName>Office 365</fullName>
                </value>
                <value>
                    <fullName>Other (list below)</fullName>
                </value>
                <value>
                    <fullName>Panopto</fullName>
                </value>
                <value>
                    <fullName>Portfolium (Canvas LTI)</fullName>
                </value>
                <value>
                    <fullName>Proctorio (Canvas LTI)</fullName>
                </value>
                <value>
                    <fullName>Publisher content (Canvas LTI)</fullName>
                </value>
                <value>
                    <fullName>Qualtrics</fullName>
                </value>
                <value>
                    <fullName>Vericite (Canvas LTI)</fullName>
                </value>
                <value>
                    <fullName>VoiceThread</fullName>
                </value>
                <value>
                    <fullName>WebEx (Legacy Technology)</fullName>
                </value>
                <value>
                    <fullName>Zoom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAFSA_Aid_Year__c</fullName>
        <label>FAFSA Aid Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAFSA_Award_Date__c</fullName>
        <label>FAFSA Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAFSA_Filed_Load_Date__c</fullName>
        <label>FAFSA Filed Load Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAFSA_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FAFSA Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAFSA_Guardian_Email__c</fullName>
        <label>FAFSA Guardian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FAFSA_ID__c</fullName>
        <label>FAFSA ID</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>FAFSA_Parent_1_School_Level__c</fullName>
        <label>FAFSA Parent 1 School Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAFSA_Parent_2_School_Level__c</fullName>
        <label>FAFSA Parent 2 School Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAFSA_Status__c</fullName>
        <label>FAFSA Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Code__c</fullName>
        <label>FA Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_RaiseMe_Scholarship__c</fullName>
        <description>populated by data load</description>
        <label>FR RaiseMe Scholarship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Advisor_Group_Mtg_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the student attended the First Year Group Advisor Mtg</description>
        <label>FY Advisor Group Mtg Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FY_Advisor_Group_Mtg_Not_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the student did NOT attended the First Year Group Advisor Mtg</description>
        <label>FY Advisor Group Mtg Not Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FY_Advisor_Individual_Mtg_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the student attended a First Year Group Individual Advisor Meeting</description>
        <label>FY Advisor Individual Mtg Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FY_Advisor_Meeting_Attended__c</fullName>
        <label>FY Advisor Meeting Attended</label>
        <summaryFilterItems>
            <field>Sites__c.FY_Advisor_Group_Mtg_Attended__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sites__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY_Advisor_Meeting_Term_Code__c</fullName>
        <label>FY Advisor Meeting Term Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Advisor_Mtg_Attended__c</fullName>
        <label>FY Advisor Mtg Attended</label>
        <summarizedField>Sites__c.Date_FY_Advisor_Mtg_Attend__c</summarizedField>
        <summaryForeignKey>Sites__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Faculty_All_Subject_Associations__c</fullName>
        <label>Faculty All Subject Associations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Level__c</fullName>
        <inlineHelpText>* denotes primary affiliation</inlineHelpText>
        <label>Faculty Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Position__c</fullName>
        <label>Faculty Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Primary_Program_Affiliations__c</fullName>
        <label>Faculty Primary Program Affiliations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Research_Interests__c</fullName>
        <label>Faculty Research Interests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Faculty_School_Codes__c</fullName>
        <inlineHelpText>* denotes primary affiliation</inlineHelpText>
        <label>Faculty School Codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Status__c</fullName>
        <label>Faculty Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstLastNameBdate__c</fullName>
        <formula>FirstName &amp;  LastName &amp; TEXT(Birthdate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstLastNameBdate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Source_Code__c</fullName>
        <label>First Source Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Source_Description__c</fullName>
        <label>First Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Term_GPA__c</fullName>
        <description>The GPA of the student&apos;s first term at the University of St. Thomas</description>
        <label>First Term GPA</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foot_On_Campus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field to identify who has stepped on campus in an easy way to capture and report. If checked (Yes), this contact has been on campus through the admissions office at some point. This field only gets checked once and does not change for the number of visits. The student&apos;s record should show only &apos;Yes/Checked&apos; for &quot;foot on campus&quot; or &apos;No/Unchecked&quot; for &quot;foot on campus.</description>
        <inlineHelpText>Manually populated field to identify who has stepped on campus in an easy way to capture and report. If checked (Yes), this contact has been on campus through the admissions office at some point. This field only gets checked once and does not change for t</inlineHelpText>
        <label>Foot On Campus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_UG_Counselor_Assignment_ConAndApps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to force UG counselor reassignment to run on this record, as well as all of its &quot;child&quot; Undergraduate-typed applications (it will un-check itself after the process has run).</description>
        <inlineHelpText>Check this box to force UG counselor reassignment to run on this record, as well as all of its &quot;child&quot; Undergraduate-typed applications (it will un-check itself after the process has run).</inlineHelpText>
        <label>Force UG Counselor Assignment ConAndApps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_UG_Counselor_Assignment_ConOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to force UG counselor reassignment to run on this record, but not its &quot;child&quot; applications (it will un-check itself after the process has run).</description>
        <inlineHelpText>Check this box to force UG counselor reassignment to run on this record, but not its &quot;child&quot; applications (it will un-check itself after the process has run).</inlineHelpText>
        <label>Force UG Counselor Assignment ConOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreign_State_Province_of_Birth__c</fullName>
        <description>If country of birth &lt;&gt; US or Canada</description>
        <label>Foreign State/Province of Birth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Last_Name__c</fullName>
        <label>Former Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Other_Names__c</fullName>
        <description>Indicates if Contact has used any other names.</description>
        <inlineHelpText>Has Contact ever used any other names?</inlineHelpText>
        <label>Former/Other Names?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freshman_Transfer__c</fullName>
        <description>Self-reported Freshman vs. Transfer from Lead Record</description>
        <inlineHelpText>Self-reported at time of inquiry.</inlineHelpText>
        <label>Freshman/Transfer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freshman</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Time_Part_Time__c</fullName>
        <description>Full Time or Part Time Indicator used for Student Retention.</description>
        <inlineHelpText>FT = Full-Time, HT = Half-Time, LH= Less than Half-Time</inlineHelpText>
        <label>Full-Time/Part-Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEOR_Code__c</fullName>
        <label>GEOR Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA_Indicator__c</fullName>
        <description>Display an image to give a GPA indicator</description>
        <formula>IF
(GPA_Overall__c &gt; 2.0, IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000002HppV&quot;, &quot;RetentionSmileyFace&quot;, 30, 30),
If (GPA_Overall__c &lt; 2.0, IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000002HppU&quot;, &quot;RetentionBad&quot;, 30, 30),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000002HppU&quot;, &quot;RetentionBad&quot;, 30, 30)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPA Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA_Inst__c</fullName>
        <description>Display Inst GPA from Banner to help with Student Retention.</description>
        <label>GPA - Inst</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPA_Overall__c</fullName>
        <description>Overall GPA loaded from Banner to help with the retention effort.</description>
        <label>GPA - Overall</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPA_Transfer__c</fullName>
        <description>Display Transfer GPA from Banner to help with student retention.</description>
        <label>GPA - Transfer</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender_Identity__c</fullName>
        <description>Applicants have the ability to explain their Gender identity.</description>
        <label>Gender Identity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Amount__c</fullName>
        <label>Grant Amount</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JMP</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>Voicethread</fullName>
                </value>
                <value>
                    <fullName>PollEverywhere</fullName>
                </value>
                <value>
                    <fullName>Ensemble Video</fullName>
                </value>
                <value>
                    <fullName>Ensemble Anthem</fullName>
                </value>
                <value>
                    <fullName>iLos</fullName>
                </value>
                <value>
                    <fullName>Other (list below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grant Assignment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Details__c</fullName>
        <label>Grant Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Name__c</fullName>
        <label>Grant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail_Date__c</fullName>
        <description>Date from Lyris that this Faculty opted out of email communications</description>
        <inlineHelpText>Date from Lyris that this Faculty opted out of email communications</inlineHelpText>
        <label>Email Opt Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_School_Expected_Graduation_Year__c</fullName>
        <label>High School Expected Graduation Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_GPA__c</fullName>
        <description>High School GPA from Banner.  This number helps with the student retention effort.</description>
        <label>High School GPA</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_School_Inquiry__c</fullName>
        <inlineHelpText>Text entry high school from Inquiry Form</inlineHelpText>
        <label>High School - Inquiry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hispanic_Latino__c</fullName>
        <label>Hispanic/Latino</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hold_Indicator__c</fullName>
        <formula>IF 
(Banner_Hold__c = True, IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000002HppX&quot;, &quot;Retention_RedDollar&quot;, 30, 30), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000002HppW&quot;, &quot;Retention_GreenDollar&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Housing_Preference_Form_Complete_Date__c</fullName>
        <label>Housing Preference Form Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Housing_Preference_Form_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Preference Form Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IELTS_Composite_Score__c</fullName>
        <inlineHelpText>Max value from Banner</inlineHelpText>
        <label>IELTS Composite Score</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Coach_Reported_Status__c</fullName>
        <description>Inside Track Passback file - Coach Reported Status</description>
        <inlineHelpText>Inside Track Passback file - Coach Reported Status</inlineHelpText>
        <label>ITK - Coach Reported Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Competitor_1__c</fullName>
        <description>Inside Track - Competitor</description>
        <inlineHelpText>Inside Track - Competitor</inlineHelpText>
        <label>ITK - Competitor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Competitor_2__c</fullName>
        <description>Inside Track - Competitor</description>
        <inlineHelpText>Inside Track - Competitor</inlineHelpText>
        <label>ITK - Competitor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Competitor_3__c</fullName>
        <description>Inside Track - Competitor</description>
        <inlineHelpText>Inside Track - Competitor</inlineHelpText>
        <label>ITK - Competitor 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Competitor_Chosen__c</fullName>
        <description>Inside Track Passback - Competitor Chosen</description>
        <inlineHelpText>Inside Track Passback - Competitor Chosen</inlineHelpText>
        <label>ITK - Competitor Chosen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Contact_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inside Track Passback - Indicates if a student is ok to contact (note: this may say false while the other fields say true, when a student says we should not contact them we still maintain their historical preferences which are displayed in the prior fields)</description>
        <label>ITK - Contact Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITK_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inside Track Passback - Email Opt Out</description>
        <inlineHelpText>Inside Track Passback - Email Opt Out</inlineHelpText>
        <label>ITK - Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITK_Exception__c</fullName>
        <description>Indication that the student did not mean to be contacted, entered their inquiry in error, the institution does not offer the desired program, and other information as to why contact has ended</description>
        <inlineHelpText>Indication that the student did not mean to be contacted, entered their inquiry in error, the institution does not offer the desired program, and other information as to why contact has ended</inlineHelpText>
        <label>ITK Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Non_Start_2__c</fullName>
        <description>Inside Track Passback file - Why a student chose to not start at the institution</description>
        <inlineHelpText>Inside Track Passback file - Why a student chose to not start at the institution</inlineHelpText>
        <label>ITK - Non Start 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Non_Start__c</fullName>
        <description>Inside Track Passback file - Why a student chose to not start at the institution</description>
        <inlineHelpText>Inside Track Passback file - Why a student chose to not start at the institution</inlineHelpText>
        <label>ITK - Non Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Phone_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inside Track Passback - Phone Opt Out</description>
        <inlineHelpText>Inside Track Passback - Phone Opt Out</inlineHelpText>
        <label>ITK - Phone Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITK_Risk_Factor_2__c</fullName>
        <description>Inside Track Passback file - Indicates the primary risk factor preventing a student from attending</description>
        <inlineHelpText>Inside Track Passback file - Indicates the primary risk factor preventing a student from attending</inlineHelpText>
        <label>ITK - Risk Factor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Risk_Factor__c</fullName>
        <description>Inside Track Passback file - Indicates the primary risk factor preventing a student from attending</description>
        <inlineHelpText>Inside Track Passback file - Indicates the primary risk factor preventing a student from attending</inlineHelpText>
        <label>ITK - Risk Factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inside Track Passback file - SMS Opt Out</description>
        <inlineHelpText>Inside Track Passback file - SMS Opt Out</inlineHelpText>
        <label>ITK - SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITK_Start_Percentage__c</fullName>
        <description>Inside Track Passback file - The likelihood the student will register and sit for classes</description>
        <inlineHelpText>Inside Track Passback file - The likelihood the student will register and sit for classes</inlineHelpText>
        <label>ITK - Start Percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Why_St_Thomas_Subreason__c</fullName>
        <description>Inside Track Passback file - Indicates why a student is interested/choosing the institution</description>
        <inlineHelpText>Inside Track Passback file - Indicates why a student is interested/choosing the institution</inlineHelpText>
        <label>ITK - Why St. Thomas - Subreason?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITK_Why_St_Thomas__c</fullName>
        <description>Inside Track Passback file - Indicates why a student is interested/choosing the institution</description>
        <inlineHelpText>Inside Track Passback file - Indicates why a student is interested/choosing the institution</inlineHelpText>
        <label>ITK - Why St. Thomas?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Foot_on_Campus__c</fullName>
        <description>Populated when the Contact initially attended an event on campus</description>
        <inlineHelpText>Populated when the Contact initially attended an event on campus</inlineHelpText>
        <label>Initial Foot on Campus</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Innovation_Lab_Relationship_Type__c</fullName>
        <description>STELAR field</description>
        <label>Innovation Lab Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Innovation_Lab_Technology__c</fullName>
        <description>STELAR Field</description>
        <label>Innovation Lab Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Innovation_Lab_Topic__c</fullName>
        <description>STELAR field</description>
        <label>Innovation Lab Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A .I.</fullName>
                </value>
                <value>
                    <fullName>M.L.</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_ACT_Composite__c</fullName>
        <description>ACT Test score received during the inquiry process</description>
        <label>Inquiry Highest ACT Composite</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquiry_ACT_Test_Date__c</fullName>
        <description>Most recent ACT Test Date</description>
        <label>Inquiry Highest  ACT Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Admission_Plan__c</fullName>
        <label>Inquiry Admission Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Action</fullName>
                </value>
                <value>
                    <fullName>Regular Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_Applicant_Type__c</fullName>
        <label>Inquiry Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First-Year</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Non-Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_College_Interest__c</fullName>
        <label>Inquiry College Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Two Year College</fullName>
                    <label>2 Year College</label>
                </value>
                <value>
                    <fullName>Four Year College</fullName>
                    <default>true</default>
                    <label>4 Year College</label>
                </value>
                <value>
                    <fullName>Both</fullName>
                    <isActive>false</isActive>
                    <label>Both</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_FY_Info_Packet_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>First-Year Info Packet has been sent, so exclude from this mailing</description>
        <label>Inquiry FY Info Packet Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_SAT_Composite__c</fullName>
        <description>SAT Test score received during the inquiry process</description>
        <label>Inquiry Highest SAT Composite</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquiry_SAT_Test_Date__c</fullName>
        <description>Most recent SAT Test Date</description>
        <label>Inquiry Highest SAT Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inside_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inside Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intended_US_Visa_Common_App__c</fullName>
        <label>Intended US Visa (Common App)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Student__c</fullName>
        <inlineHelpText>Undg RFI</inlineHelpText>
        <label>International Student</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internship_Restrictions__c</fullName>
        <description>Captures if the student opts out or is ineligible for the internship program</description>
        <inlineHelpText>Captures if the student opts out or is ineligible for the internship program</inlineHelpText>
        <label>Internship Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Document_Load_Date__c</fullName>
        <label>Last Document Load Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>